--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -45,7 +45,7 @@ body {
   display: inline;
   padding: 10px 0;
   font-size: 12px;
-  color: #00bbf0; }
+  color: #005792 solid; }
 
 .form_control input:focus,
 .form_control input:valid {
