--- a/assets/scss/loginform.scss
+++ b/assets/scss/loginform.scss
@@ -7,7 +7,7 @@
 }
 .container { 
   animation-name: floating;
-  animation-duration: 1.25s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   animation-direction: inherit;
@@ -27,7 +27,7 @@
   margin-bottom: 30px;
   font-weight: bolder;
   animation-name: floating;
-  animation-duration: 1.25s;
+  animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
@@ -53,7 +53,7 @@ body {
 //   color: #fff;
 
 // color: $lime;
-  color: #00bbf0;
+  color: #005792;
   font-family: 'Muli', sans-serif;
   display: flex;
   flex-direction: column;
@@ -123,7 +123,7 @@ body {
 .form-control {
   position: relative;
   margin: 20px 0 40px;
-  width: 500px;
+  width: 300px;
   
 }
 
@@ -143,7 +143,7 @@ body {
 .form-control input:focus,
 .form-control input:valid {
   outline: 0;
-  border-bottom-color: lightblue;
+  border-bottom-color:#005792 ;
 }
 
 .form-control label {
@@ -162,7 +162,7 @@ body {
 
 .form-control input:focus + label span,
 .form-control input:valid + label span {
-  color: lightblue;
+  color: #005792;
   transform: translateY(-30px);
 }
 
