--- a/assets/scss/profile.scss
+++ b/assets/scss/profile.scss
@@ -1,27 +1,28 @@
-body{
-    align-items: center;
-    margin: 0;
+// body{
+//     align-items: center;
+//     margin: 0;
    
-    color: rgb(80, 80, 80);
-   background-color:#141010 ;
-   height: 100vh;
-   position: relative;
-   bottom: 0;
+//     color: rgb(80, 80, 80);
+  
+//    height: 100vh;
+//    position: relative;
+//    bottom: 0;
     // background: #02AAB0;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0); 
     // background: linear-gradient(to right, #00CDAC, #02AAB0);
     
-    }
+    // }
     .profile{
         min-height: 100vh; 
         align-items: center;
 
     }
+    .profileclass{
+        min-height: 100vh; 
+        align-items: center;
 
-    
-   
 
-
+    }
 
 ul{
     list-style-type: none;
