--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,8 @@
    <p>
     <%= user.name %>
    </p> -->
+
+   <div class="profileclass">
    <img src="<%=profile_user.avatar%>" alt="<%= profile_user.name %>" width="100">
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
@@ -44,3 +46,4 @@
 
                 <%} %>
             </div>
+        </div>
