--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -30,6 +30,27 @@
     
     <input class="btn" type="submit" value="Sign-In"></input>
 </form>
+<br>
+
+<p style="font-weight: bolder;">
+ 
+    
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbspOr
+</p>
+<br>
+
+<p style="font-weight: bolder;">
+    <a href="/users/auth/google">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img class="Google" src="https://cdn-icons-png.flaticon.com/128/300/300221.png" height="30px">
+        &nbsp;
+        <!-- <i class="fab fa-google"></i> -->
+        
+            Google Sign In
+        
+        </a>
+    </p>
 
 </div>
 <script src="script.js"></script>
