--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -48,6 +48,31 @@
         <input type="password" name="confirm_password" placeholder="Confirm Password" required autofocus> -->
         <input class="btn"type="submit" value="Sign-up"></input>
     </form>
+    <br>
+
+    <p style="font-weight: bolder;">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+         Or
+    </p>
+    <br>
+
+    <!-- <p>
+        <a href="/users/auth/google">Google Sign In/Sign Up</a>
+    </p> -->
+
+
+    <p style="font-weight: bolder;">
+        <a href="/users/auth/google">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img class="Google" src="https://cdn-icons-png.flaticon.com/128/300/300221.png" height="30px">
+            &nbsp;
+            <!-- <i class="fab fa-google"></i> -->
+            
+                Google Sign In
+            
+            </a>
+        </p>
 
 </div>
 <script src="script.js"></script>
