--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,10 +1,22 @@
 .profile {
-  min-height: 100vh;
-  align-items: center; }
+  margin-top: auto;
+  text-align: center;
+  margin-top: 15%;
+  border: solid 5px #4A00E0;
+  border-bottom-left-radius: 100px;
+  border-top-right-radius: 100px;
+  padding: 15px;
+  box-shadow: 0 5px 30px -5px black;
+  max-width: 25%;
+  margin-left: 38%;
+  margin-bottom: 25%;
+  max-height: 50%; }
 
 .profileclass {
-  min-height: 100vh;
-  align-items: center; }
+  min-height: 100vh; }
+
+.profilepic {
+  border-radius: 100%; }
 
 ul {
   list-style-type: none; }
