--- a/assets/scss/loginform.scss
+++ b/assets/scss/loginform.scss
@@ -5,15 +5,15 @@
 * {
   box-sizing: border-box;
 }
-.container { 
-  animation-name: floating;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  animation-direction: inherit;
-  // margin-left: 30px;
-  // margin-top: 5px;
-}
+// .container { 
+//   animation-name: floating;
+//   animation-duration: 1s;
+//   animation-iteration-count: infinite;
+//   animation-timing-function: ease-in-out;
+//   animation-direction: inherit;
+//   // margin-left: 30px;
+//   // margin-top: 5px;
+// }
 
 @keyframes floating {
   0% { transform: translate(0,  0px); }
@@ -30,6 +30,15 @@
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+} 
+.google:hover{
+ 
+  animation-name: floating;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+
+
 }
 .webname:hover{
   transform: scale(0.98);
@@ -70,7 +79,7 @@ body {
 //   background-color: #bbe4e9;
   // background-color: #fbf2d5;
   background-color: #c7eeff;
-  padding: 20px 40px;
+  padding: 25px 45px;
   border-radius: 5px;
   box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 2);
 //   border-radius: 10px 10px 0 0;
