--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -41,7 +41,7 @@
                                 <i class="fas fa-sign-out-alt"></i>
                                 Sign-Out</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <img style class="header-img"  src="<%=user.avatar%>" alt="<%=user.name %>" width="30" height="30">
+                            <img  class="header-img"  src="<%=user.avatar%>" width="30" height="30">
                              <%= user.name %>
                             <!-- <li><p>Email:<%= user.email %></p></li> -->
     
