--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 <!-- <div class="hero" >
 
     <div class="hero__container">
-      <div class="hero__container--left">
+      <div class="hero__container--left"> 
         <h1>Social media website</h1>
         <h2>Created by Sankha</h2>
         <p>Sign up now to join the list.</p> -->
@@ -40,7 +40,7 @@
         <section id="feed-posts">
           <br><br>
           <!-- <img class="postimg" src="images/post.png" alt=""> -->
-          <h4><img class="postimg" src="images/post.png" alt="">  Posts</h4>
+          <h4>  Posts</h4>
           
          
           <form action="/posts/create" id="new-post-form" enctype="multipart/form-data" method="POST">
@@ -54,7 +54,7 @@
           </div>
             <!-- <img class="postimg" src="images/post.png" alt=""> -->
            
-          <input type="submit" class="button" value="Add post">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" class="button" value="Add post">
          
           </form>
         
@@ -165,7 +165,7 @@
         </section>
         <section id=user-friends>
           <br> <br>
-          <img src="images/laugh.png" alt="">
+          <img class="frnds-img" src="images/laugh.png" height="65px">
           <h4>
             
             Friends</h4>
@@ -176,7 +176,7 @@
               <i class="fas fa-user" style="color:palegoldenrod ;"></i>
               <!-- <img style class="header-img"  src="<%=u.avatar%>"  width="30" height="30"> -->
 
-              <a style="text-decoration: none;" href="/users/profile/<%= u.id %>"><%= u.name%></a>
+              <a style="color:palegoldenrod ;text-decoration:none;"  href="/users/profile/<%= u.id %>"><%= u.name%></a>
             </p>
 
             <% } %>
