--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
    </p> -->
 
    <div class="profileclass">
-   <img src="<%=profile_user.avatar%>" alt="<%= profile_user.name %>" width="100">
+   <img class ="profilepic" src="<%=profile_user.avatar%>"  width="100">
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
    </p>
@@ -22,17 +22,19 @@
             <!-- to update user name or email -->
             <br><br>
             <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-                Update username or password
+                Wanna update username or password ?
             </p>
             <br>
             
             <div class="form_control" style="display:inline-block;">
             <form class="form_control" action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
                 <input type="text" name="name" placeholder="User" value="<%=profile_user.name%>" required>
-                
+                <br>
                 <input type="email" name="email" placeholder="Email" value="<%=profile_user.email%>" required>
+                <br>
                 <input type="file" name="avatar" placeholder="Profile Picture">
             </div>
+            <br>
                 <input class="button" type="submit" value="Update">
             </form>
         
