--- a/assets/scss/profile.scss
+++ b/assets/scss/profile.scss
@@ -32,10 +32,10 @@
         
         
     }
-    .profileclass{
-        min-height: 100vh; 
+    // .profileclass{
+    //     min-height: 100vh; 
      
-    }
+    // }
     .profilepic{
         border-radius: 100%;
 
