--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="/css/profile.css">
     <!-- <link rel="stylesheet" href="/css/home.css"> -->
     <!-- <h1>Codeial /Profile page</h1> -->
+    <div class="wrap" style="height:100vh">
     <div class="profile">
     <!-- <img src="<%=user.avatar%>" alt="<%= user.name %>" width="100">
    <p>
@@ -49,3 +50,4 @@
                 <%} %>
             </div>
         </div>
+    </div>
