--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -40,17 +40,22 @@
 </p>
 <br>
 
-<p style="font-weight: bolder;">
-    <a href="/users/auth/google">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img class="Google" src="https://cdn-icons-png.flaticon.com/128/300/300221.png" height="30px">
-        &nbsp;
-        <!-- <i class="fab fa-google"></i> -->
-        
-            Google Sign In
-        
-        </a>
-    </p>
+
+<button style="width: 100%;padding: 0px;margin: 0px;font-weight: bolder">
+
+        <a href="/users/auth/google">
+           
+            <img class="Google" src="https://cdn-icons-png.flaticon.com/128/300/300221.png" height="30px">
+            <!-- &nbsp; -->
+            <!-- <i class="fab fa-google"></i> -->
+            
+                Google Sign In
+            
+            </a>
+
+</button>
+
+
 
 </div>
 <script src="script.js"></script>
