--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -2,7 +2,8 @@
 <link rel="stylesheet" href="/css/loginform.css">
 <!-- <p class="webname">Codeial</p> -->
 <p class="webname">
-    <i class="far fa-eye "></i>
+    <!-- <i class="far fa-eye "></i> -->
+    <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-chat-notifications-justicon-lineal-color-justicon.png"/>
     Codeial</p>
 
 <!-- //remember to create an action for the route entered -->
@@ -61,18 +62,20 @@
         <a href="/users/auth/google">Google Sign In/Sign Up</a>
     </p> -->
 
+    <button style="width: 100%;padding: 0px;margin: 0px;font-weight: bolder">
 
-    <p style="font-weight: bolder;">
         <a href="/users/auth/google">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           
             <img class="Google" src="https://cdn-icons-png.flaticon.com/128/300/300221.png" height="30px">
-            &nbsp;
+            <!-- &nbsp; -->
             <!-- <i class="fab fa-google"></i> -->
             
                 Google Sign In
             
             </a>
-        </p>
+
+</button>
+
 
 </div>
 <script src="script.js"></script>
