--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -105,7 +105,7 @@ body {
 
 #home-container {
   display: flex;
-  min-height: 100vh; }
+  height: auto; }
   #home-container #feed-posts {
     width: 80%;
     margin-left: 40%; }
