--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -9,8 +9,9 @@ footer{
     background: #8E2DE2;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  top: auto;
-        position: relative;
+  // top: auto;
+        // position: absolute;
+        // bottom: 0;
       
      
         // display: flex;
