--- a/assets/css/loginform.css
+++ b/assets/css/loginform.css
@@ -38,12 +38,12 @@ body {
   margin: 0; }
 
 .container {
-  background-color: #c7eeff;
   padding: 25px 45px;
   border-radius: 5px;
   box-shadow: 0 5px 30px -5px black;
   border-bottom-left-radius: 100px;
-  border-top-right-radius: 100px; }
+  border-top-right-radius: 100px;
+  background-color: sandybrown; }
 
 .container h1 {
   text-align: center;
@@ -52,6 +52,10 @@ body {
 .container a {
   text-decoration: none;
   color: orangered; }
+
+.container a:hover {
+  text-decoration: none;
+  color: black; }
 
 .btn {
   cursor: pointer;
