--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -10,7 +10,7 @@
             <% if (locals.user) {%>
     
                 <nav class="navbar" style="align-items: center;">
-                    <h1 class="webname">
+                    <h1 class="webname" style="color: #f96d00;;">
                         <!-- <img src="images/logo" alt=""> -->
                         <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/32/000000/external-chat-notifications-justicon-lineal-color-justicon.png" style="height: 20%; " st/>
                         <!-- <i class="far fa-eye "></i> -->
