--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,15 @@
 footer {
   margin-top: 20px;
-  color: white;
+  color: #f96d00;
   padding-top: 5px;
   text-align: center;
   width: 100%;
   height: 2.5rem;
-  background: linear-gradient(109.6deg, #ef2525 11.2%, #0e0b38 91.1%);
+  background: #000000;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   position: relative;
   bottom: 0; }
