--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,21 +4,21 @@
   display: inline-block;
   position: relative;
   background-color: black;
-  background: radial-gradient(ellipse at center, #00bbf0 0%, #00bbf0 14%, black 15%, black 100%);
+  background: radial-gradient(ellipse at center, #6c5ce7 0%, #6c5ce7 14%, black 15%, black 100%);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  border: 4px solid #00bbf0; }
+  border: 4px solid #6c5ce7; }
 
 .Loader::after,
 .Loader::before {
   content: '';
   border-radius: 50%;
-  border-radius: 4px solid #00bbf0;
+  border-radius: 4px solid #6c5ce7;
   position: absolute;
   height: 30px;
   width: 4px;
-  background: #00bbf0;
+  background: #6c5ce7;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) rotate(0deg);
@@ -27,7 +27,7 @@
   animation: rotation 10s linear infinite; }
 
 .Loader::before {
-  border-radius: 4px solid #00bbf0;
+  border-radius: 4px solid #6c5ce7;
   height: 40px;
   width: 4px;
   transform: translateX(-50%) rotate(0deg);
@@ -54,7 +54,7 @@
   bottom: 0;
   margin: auto;
   border: 7px solid;
-  border-color: transparent transparent #05004e orangered;
+  border-color: transparent transparent #05004e white;
   width: 68px;
   height: 68px;
   border-radius: 50%;
@@ -65,7 +65,7 @@
 .loader::before {
   width: 58px;
   height: 58px;
-  border-color: #00bbf0 #ff41ed transparent transparent;
+  border-color: white black transparent transparent;
   animation: rotation 1s linear infinite; }
 
 .loader {
@@ -75,7 +75,7 @@
   display: inline-block;
   position: relative;
   border: 7px solid;
-  border-color: #f96d00 #00bbf0 transparent transparent;
+  border-color: black white transparent transparent;
   box-sizing: border-box;
   animation: rotation 1.2s linear infinite; }
 
@@ -95,25 +95,24 @@
   background-color: black;
   overflow: hidden;
   align-items: center;
-  width: 40%;
-  padding: 10%;
-  border: solid 5px #00bbf0;
+  width: 35%;
+  padding: 1%;
+  height: 50vmin;
+  border: solid 6px #f96d00;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
   margin-bottom: 50px;
-  margin-left: 10vh;
+  margin-left: 30vh;
   margin-bottom: 20vh;
   margin-top: 12vh; }
 
 .whole {
   overflow: auto;
   background-color: black;
-  color: blanchedalmond;
   width: 65%;
   padding-left: 1%;
   padding-right: 1%;
   padding-bottom: 5%;
-  border: 5px solid #00bbf0;
   border-radius: 50px;
   margin-bottom: 50px; }
 
@@ -125,11 +124,17 @@
   animation-delay: 0s; }
 
 body {
+  background: #1A2980;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #26D0CE, #1A2980);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #26D0CE, #1A2980);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 0;
   font-weight: bolder;
   height: 100vh;
   position: relative;
-  color: blanchedalmond;
+  color: #81ecec;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .button {
@@ -236,14 +241,26 @@ body {
     margin-left: 15%; }
   #home-container #user-friends {
     width: 15%;
-    border: solid 5px #00bbf0;
+    border: solid 6px #6c5ce7;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     min-height: 50vh;
     position: relative;
     margin-bottom: 0;
-    color: blanchedalmond;
+    color: #f96d00;
     padding-left: 5%;
     padding-right: 2.5%;
     text-decoration: none;
     background-color: black; }
+
+input[type=file]::file-selector-button {
+  border: 2px solid #6c5ce7;
+  padding: .2em .4em;
+  border-radius: .2em;
+  background-color: #a29bfe;
+  transition: 0.2s;
+  text-decoration: none; }
+
+input[type=file]::file-selector-button:hover {
+  background-color: #81ecec;
+  border: 2px solid #00cec9; }
