--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,21 +5,21 @@
   display: inline-block;
   position: relative;
   background-color: black;
-  background: radial-gradient(ellipse at center, #00bbf0 0%, #00bbf0 14%, black 15%, black 100%);
+  background: radial-gradient(ellipse at center, #6c5ce7 0%, #6c5ce7 14%, black 15%, black 100%);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  border: 4px solid #00bbf0;
+  border: 4px solid #6c5ce7;
 }
 .Loader::after,
 .Loader::before {
   content: '';  
     border-radius: 50%;
-    border-radius: 4px solid #00bbf0;
+    border-radius: 4px solid #6c5ce7;
   position: absolute;
   height: 30px;
   width: 4px;
-  background: #00bbf0;
+  background: #6c5ce7;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) rotate(0deg);
@@ -28,7 +28,7 @@
   animation: rotation 10s linear infinite;
 }
 .Loader::before {
-  border-radius: 4px solid #00bbf0;
+  border-radius: 4px solid #6c5ce7;
   height: 40px;
   width: 4px;
   transform: translateX(-50%) rotate(0deg);
@@ -58,7 +58,7 @@
   bottom: 0;
   margin: auto;
   border: 7px solid;
-  border-color: transparent transparent #05004e orangered;
+  border-color: transparent transparent #05004e white;
   width: 68px;
   height: 68px;
   border-radius: 50%;
@@ -70,7 +70,7 @@
 .loader::before {
   width: 58px;
   height: 58px;
-  border-color:#00bbf0 #ff41ed transparent transparent;
+  border-color:white black transparent transparent;
   animation: rotation 1s linear infinite;
 }
 .loader {
@@ -80,7 +80,7 @@
   display: inline-block;
   position: relative;
   border: 7px solid;
-  border-color: #f96d00 #00bbf0 transparent transparent;
+  border-color: black white transparent transparent;
   box-sizing: border-box;
   animation: rotation 1.2s linear infinite;
 }
@@ -115,12 +115,14 @@
   background-color: black;
   overflow: hidden;
   align-items: center;
-  width: 40%;
-  padding:10%;
+  width: 35%;
+  padding:1%;
+  height: 50vmin;
+  
   // padding-left: 10%;
   // padding-right: 10%;
   // border: 4px solid #00bbf0;
-  border:solid 5px #00bbf0;
+  border:solid 6px #f96d00;
   // border:solid 5px #fecd51 ;
  
   border-top-right-radius: 100px;
@@ -128,7 +130,7 @@
   // border-radius: 100%;
  
   margin-bottom: 50px;
-  margin-left: 10vh;
+  margin-left: 30vh;
   // box-shadow:0 5px 30px -5px rgba(0, 0, 0, 2);
   margin-bottom: 20vh;
   margin-top: 12vh;
@@ -142,12 +144,14 @@
   // background-color: #222831;
   overflow:auto;
   background-color:black;;
-  color: blanchedalmond;
+  // color: blanchedalmond;
+  // color: #f96d00;
   width: 65%;
   padding-left: 1%;
   padding-right: 1%;
   padding-bottom: 5%;
-  border: 5px solid #00bbf0;
+  // border: 5px solid #00bbf0;
+  // border: 5px solid #f96d00;
   border-radius: 50px;
   margin-bottom: 50px;
   // box-shadow:0 5px 30px -5px rgba(0, 0, 0, 2);
@@ -167,6 +171,11 @@ animation-delay: 0s;
 
 
 body{
+
+  background: #1A2980;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   // background: linear-gradient(72.3deg, rgb(29, 7, 64) 8.5%, rgb(253, 105, 139) 92.2%);
 
 
@@ -196,7 +205,9 @@ body{
     // text-align: center; 
     // color: #005792;
     // color: #4A00E0;
-    color:blanchedalmond;
+    // color:blanchedalmond;
+    // color: #f96d00;
+    color: #81ecec;
     // color: #f6378f;
    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -350,14 +361,15 @@ body{
     //   border-left: 4px solid  #00bbf0;
     // border-top: 4px solid  #00bbf0;
     // border-bottom: 5px solid  #00bbf0;
-    border:solid 5px #00bbf0;
+    border:solid 6px #6c5ce7;;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     min-height:  50vh;;
     position: relative;
     // padding-bottom: 10px;
     margin-bottom: 0;
-    color: blanchedalmond;
+    // color: blanchedalmond;
+    color: #f96d00;
     // background-color: #a393eb;
     // background-color: #d59bf6;
     // bottom: 0;
@@ -377,6 +389,40 @@ body{
   }
  
 }
+// .inputfile {
+// 	width: 0.1px;
+// 	height: 0.1px;
+// 	opacity: 0;
+// 	overflow: hidden;
+// 	position: absolute;
+// 	z-index: -1;
+// }
+// .inputfile + label {
+//   font-size: 1.25em;
+//   font-weight: 700;
+//   color: white;
+//   background-color: black;
+//   display: inline-block;
+// }
 
-  
- 
+// .inputfile:focus + label,
+// .inputfile + label:hover {
+//   color: #00bbf0;
+// }
+// .inputfile + label {
+// 	cursor: pointer; /* "hand" cursor */
+// }
+input[type=file]::file-selector-button {
+  border: 2px solid #6c5ce7;
+  padding: .2em .4em;
+  border-radius: .2em;
+  background-color: #a29bfe;
+  transition: 0.2s;
+  text-decoration: none;
+}
+
+input[type=file]::file-selector-button:hover {
+  background-color: #81ecec;
+  border: 2px solid #00cec9;
+}
+
