--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -3,7 +3,7 @@ footer{
 
   margin-top: 20px;
  
-    color: #f96d00;
+    color: white;
     padding-top: 5px;
 
     
@@ -28,13 +28,10 @@ footer{
 
 
 
-
-        background: #000000;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
         position:relative;
         bottom: 0;
-  
+    background-color: #6c5ce7;
 
 
 
