--- a/assets/scss/profile.scss
+++ b/assets/scss/profile.scss
@@ -34,6 +34,19 @@
         
         
     }
+    .form_Control input {
+        background-color: transparent;
+        // border: 0;
+        border: 5px #4A00E0 solid;
+        display: block;
+        width: 100%;
+        padding: 15px 0;
+        font-size: 20px;
+      //   color: #fff;
+        // color:#00bbf0 ;
+       
+        color:blanchedalmond ;
+      }
     // .profileclass{
     //     min-height: 100vh; 
      
