--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -98,7 +98,7 @@
   width: 35%;
   padding: 1%;
   height: 50vmin;
-  border: solid 6px #f96d00;
+  border: solid 4px #f96d00;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
   margin-bottom: 50px;
@@ -109,10 +109,12 @@
 .whole {
   overflow: auto;
   background-color: black;
+  margin-left: 20vh;
   width: 65%;
   padding-left: 1%;
   padding-right: 1%;
   padding-bottom: 5%;
+  border: 4px solid #00bbf0;
   border-radius: 50px;
   margin-bottom: 50px; }
 
@@ -241,7 +243,7 @@ body {
     margin-left: 15%; }
   #home-container #user-friends {
     width: 15%;
-    border: solid 6px #6c5ce7;
+    border: solid 4px #00bbf0;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     min-height: 50vh;
@@ -262,5 +264,10 @@ input[type=file]::file-selector-button {
   text-decoration: none; }
 
 input[type=file]::file-selector-button:hover {
+  background-color: #81ecec;
+  border: 2px solid #00cec9; }
+
+#1:hover {
+  transition: 0.2s;
   background-color: #81ecec;
   border: 2px solid #00cec9; }
