--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -14,6 +14,15 @@
   margin-bottom: 25%;
   min-height: 55%; }
 
+.form_Control input {
+  background-color: transparent;
+  border: 5px #4A00E0 solid;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 20px;
+  color: blanchedalmond; }
+
 .profilepic {
   border-radius: 100%; }
 
