--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -20,16 +20,13 @@
 //     list-style: none;
   // color: white;
 }
-.i{
-  color:#fff;
-  
-}
+
 
 .navbar_menu--links{
   text-decoration: none;
   list-style: none;
   // color: white;
-  color: #f96d00;
+  color: white;
   padding-bottom:2px;
   
 }
@@ -50,7 +47,7 @@
 // }
   // background: $light;
   i{
-    color: white;
+    color: black;
     
   }
   // background: #8E2DE2;  /* fallback for old browsers */
@@ -70,9 +67,13 @@
   // background: #000000;  /* fallback for old browsers */
   // background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
   // background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-color:#434343;
-  color: #f96d00;
-
+  
+  // background: #000000;  /* fallback for old browsers */
+  // background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: black;
+background-color: #6c5ce7;
+  
 
 
 
