--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,6 +14,8 @@
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
    </p>
+   
+
 
 
         <% if(user.id == profile_user.id) {%>
@@ -27,14 +29,15 @@
             </p>
             <br>
             
-            <div class="form_control" style="display:inline-block;">
-            <form class="form_control" action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
+            <div class="form_Control" style="display:inline-block;">
+            <form class="form_Control" action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
                 <input type="text" name="name" placeholder="User" value="<%=profile_user.name%>" required>
                 <br>
                 <input type="email" name="email" placeholder="Email" value="<%=profile_user.email%>" required>
                 <br>
                 <input type="file" name="avatar" placeholder="Profile Picture">
             </div>
+            <br>
             <br>
                 <input class="button" type="submit" value="Update">
                 <br>
